--- a/main.css
+++ b/main.css
@@ -1,11 +1,13 @@
 body{
   text-align: center;
+  background: url(https://i.imgur.com/stJc4rr.png) center;
+  background-size: cover;
 }
 img{
   display: inline-block;
-  width: 13%;
-  height: 13%;
+  width: 55%;
   margin-right: 6px;
+  margin-top: 8px;
 }
 h2{
   display: inline-block;
@@ -16,30 +18,80 @@ h2{
   justify-content: center;
 }
 input{
-  border:1px solid #5B58AD;
+  border:1px solid transparent;
   padding: 4px 2px;
+  border-radius: 40px;
+  color: #82A098;
 }
 input::placeholder {
-  color: #CDCDCD;
-  padding-left: 2px;
+  color: #82A098;
+  padding-left: 5px;
+}
+input:focus{
+  outline: none;
 }
 button{
-  background-color: #A0E557;
-  color: #000;
+  background-color: #82A098;
+  color: #FAF9F9;
   border:0;
   border-radius: 100px;
   font-weight: bold;
   padding: 4px 8px;
-  margin-top: 8px;
+  margin-top: 12px;
   outline: 0;
   cursor: pointer;
 }
 button:focus{
-  background-color: #000;
-  color: #A0E557;
+  background-color: #FAF9F9;
+  color: #82A098;
+}
+#loading i{
+  margin-top: 12px;
+  font-size: 40px;
+  color: #82A098;
 }
 #is_classing,#not_classing{
   display: none;
+  margin-top: 8px;
+}
+.talk-bubble{
+  position: relative;
+  text-align: center;
+  border-radius: 50%;
+  background-color: #FAF9F9;
+  width: 100px;
+  height: 60px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin: 12px auto;
+  color: #82A098;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 60px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.talk-bubble::after{
+  position: absolute;
+  content: '';
+  width: 20px;
+  height: 10px;
+  background-color: #FAF9F9;
+  left: 30%;
+  bottom: 6px;
+  transform: rotate(60deg);
+}
+.talk-bubble::before{
+  position: absolute;
+  content: '';
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 20px 0 0 20px;
+  border-color: transparent transparent transparent #FAF9F9;
+  left: 20%;
+  bottom: -6px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  transform: rotate(-30deg);
 }
 #reload{
   background-color: transparent;
